--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
 
 .main {
   min-height: 100vh;
   background-color: #da2c38;
   font-family: "Orbitron", sans-serif;
+
 }
 
 .content-wrapper {
