--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,17 @@
 
 .main {
   min-height: 100vh;
-  background-color: #da2c38;
+  background-color: #d62f48;
   font-family: "Orbitron", sans-serif;
-
-}
-
-.content-wrapper {
-  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 16px;
+  letter-spacing: 1.5px;
+}
+
+.content-wrapper {
+  margin: 1rem;
 }
 
 #drum-machine {
@@ -20,7 +21,7 @@
   background-color: #2e2828;
   color: white;
   border: white solid 15px;
-  padding: 2em;
+  padding: 1em;
 }
 
 .title {
@@ -33,21 +34,41 @@
 }
 
 #display label {
-  color: #c7193e;
+  color: #2e2828;
+  width: 15rem;
   background-color: white;
   padding: 0.5em 1em;
   border-radius: 10px;
+  margin-top: 8px;
+  margin-left: -1rem;
 }
 
-
 .btn {
+  font-size: 1.5em;
   min-width: 70px;
-  border-radius: 15%;
-  font-size: 1.2em;
+  padding: 10px 15px;
+  border-radius: 10%;
   margin: 5px 5px;
   box-sizing: border-box;
-  background-color: #17c2e8;
-  padding: 10px 15px;
+  background-color: #19c77c;
+  color: white;
+}
+
+.btn:hover{
+  background-color: white;
+  color: #19c77c;
+}
+
+.focus{
+  background-color: white;
+  color: #19c77c;
+}
+
+.by {
+  text-align: center;
+  padding: 2rem;
+  color: white;
+  font-size: 1rem;
 }
 
 
@@ -63,9 +84,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
+  align-items: center;
 }
 
 .col {
   padding: 0;
-  justify-content: center;
+  text-align: center;
 }
